# Snowflake-MCP-Server-with-Kiro-CLI-Integration

./: .env.example  .gitignore  DEVLOG.md  README.md  pyproject.toml  requirements.txt
.kiro/documentation/: README.md  architecture.md
.kiro/prompts/: code-review-hackathon.md  plan-feature.md  quickstart.md
.kiro/settings/: mcp.json
.kiro/skills/: README.md
.kiro/steering/: product.md  structure.md  tech.md
src/: __init__.py  config.py  main.py  mock_data.py  visualize.py
src/tools/: __init__.py  snowflake_tools.py
tests/: conftest.py  test_cli_mock.py  test_integration.py  test_manual.py  test_tools.py
